# stellaryb

./: .env  .env.example  README.md  index.html  package-lock.json  package.json
contracts/smart/: Cargo.toml
contracts/smart/contracts/counter/: Cargo.toml
contracts/smart/contracts/counter/src/: lib.rs
contracts/smart/contracts/counter/test_snapshots/tests/: test_decrement.1.json  test_decrement_below_zero.1.json  test_empty_recent.1.json  test_events.1.json  test_increment.1.json  test_initial_count.1.json  test_multiple_txs.1.json  test_recent_txs.1.json  test_record.1.json
netlify/functions/: get-balance.js  get-recent-txs.js  get-total-txs.js
src/: App.tsx  index.css
src/components/: BalanceBadge.tsx  ErrorBanner.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  NetworkBadge.tsx  SendForm.tsx  StatusBadge.tsx  TransactionFeed.tsx  TransactionStatus.tsx  WalletInfo.tsx  WalletSelector.tsx
src/hooks/: useContract.ts  useEventListener.ts  useTransactionStatus.ts  useWallet.ts
src/pages/: Home.tsx
src/services/: contract.ts  rpc.ts  stellar.ts  wallet.ts
src/types/: contract.ts  wallet.ts
src/utils/: api.ts  constants.ts  formatter.ts  helpers.ts
