[package]
name = "txlogger"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = 3
overflow-checks = true
lto = true
debug = false
codegen-units = 1
strip = "symbols"
